2007-10-07  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: better handling of special regions.
	* Tests/*: test for more possibility regarding titlepage output 
	or not with copying output or not.
	rename formatting-regions to formatting_regions.

2007-10-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle titlepage like other 
	special regions. 
	Don't add the index entries in footnote within special regions.
	* Tests/*: test for footnote in float caption and anchor and index
	in that footnote.
	test for titlepage with most of the constructs within.

2007-10-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: separate global variables of pass_structure and
	pass_texi, prefix some of those vaiables, and clean variable and 
	function names.
	add more information relative to the special regions.
	Treat more systematically the special regions with an initialization
	code allowing to fill the state with relevant information.
	Don't output footnote lines for footnotes not part of the document.
	Better id generation for headings in region.
	Better handling of anchors in special regions.
	Prefix the targets in special regions with t_h.
	* texi2html.pl, texi2html.init: use a formatting function for 
	documentdescription and give more arguments to copying_comment.

2007-10-04  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle headings more like normal
	@-commands and not like sectionning commands.
	Don't associate headings with the following index entries.
	Separate heading absolute number and heading id from section 
	number and id.
	* Tests/*: add tests for headings

2007-10-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: use relative file names for frame
	file names (report from Graham Percival).
	* texi2html.init: use entities for simple quotes in normal text.

2007-10-02  Patrice Dumas  <dumas@centre-cired.fr>
