@@ -702,8 +702,8 @@ kbd: <kbd>``simple-double--three---four----''</kbd> <br>
 <code>@,{--c}</code> &ndash;c,
 <code>@dotless{--a}</code> &ndash;a
 <code>@dotless{a}</code> a
-<code>@footnote{in footnote}</code> <a href="#t_htitlepage_FOOT1">(1)</a>
-<code>@footnote{in footnote2}</code> <a href="#t_htitlepage_FOOT2">(2)</a>
+<code>@footnote{in footnote}</code> <a name="t_htitlepage_DOCF1" href="#t_htitlepage_FOOT1">(1)</a>
+<code>@footnote{in footnote2}</code> <a name="t_htitlepage_DOCF2" href="#t_htitlepage_FOOT2">(2)</a>
 </p>
 <p><code>@image{f--ile,,e--xt}</code> <img src="./f--ile.jpg" alt="f--ile">
 <code>@image{f--ile,,,,e--xt}</code> <img src="./f--ile.e--xt" alt="f--ile">
@@ -1253,8 +1253,8 @@ kbd: <kbd>``simple-double--three---four----''</kbd> <br>
 <code>@,{--c}</code> &ndash;c,
 <code>@dotless{--a}</code> &ndash;a
 <code>@dotless{a}</code> a
-<code>@footnote{in footnote}</code> <a href="#t_hcopying_FOOT1">(1)</a>
-<code>@footnote{in footnote2}</code> <a href="#t_hcopying_FOOT2">(2)</a>
+<code>@footnote{in footnote}</code> <a name="t_hcopying_DOCF1" href="#t_hcopying_FOOT1">(1)</a>
+<code>@footnote{in footnote2}</code> <a name="t_hcopying_DOCF2" href="#t_hcopying_FOOT2">(2)</a>
 </p>
 <p><code>@image{f--ile,,e--xt}</code> <img src="./f--ile.jpg" alt="f--ile">
 <code>@image{f--ile,,,,e--xt}</code> <img src="./f--ile.e--xt" alt="f--ile">
@@ -3005,8 +3005,8 @@ kbd: <kbd>``simple-double--three---four----''</kbd> <br>
 <code>@,{--c}</code> &ndash;c,
 <code>@dotless{--a}</code> &ndash;a
 <code>@dotless{a}</code> a
-<code>@footnote{in footnote}</code> <a name="t_hcopying_DOCF1" href="#t_hcopying_FOOT1">(1)</a>
-<code>@footnote{in footnote2}</code> <a name="t_hcopying_DOCF2" href="#t_hcopying_FOOT2">(2)</a>
+<code>@footnote{in footnote}</code> <a href="#t_hcopying_FOOT1">(1)</a>
+<code>@footnote{in footnote2}</code> <a href="#t_hcopying_FOOT2">(2)</a>
 </p>
 <p><code>@image{f--ile,,e--xt}</code> <img src="./f--ile.jpg" alt="f--ile">
 <code>@image{f--ile,,,,e--xt}</code> <img src="./f--ile.e--xt" alt="f--ile">
@@ -4174,17 +4174,21 @@ Menu comment
 <td valign="middle" align="left">[<a href="#SEC_About" title="About (help)"> ? </a>]</td>
 </tr></table>
 <h1>Footnotes</h1>
-<h3><a name="FOOT1" href="#DOCF1">(1)</a></h3>
+<h3><a name="t_htitlepage_FOOT1" href="#t_htitlepage_DOCF1">(1)</a></h3>
+<p>in footnote
+</p><h3><a name="t_htitlepage_FOOT2" href="#t_htitlepage_DOCF2">(2)</a></h3>
+<p>in footnote2
+</p><h3><a name="t_hcopying_FOOT1" href="#t_hcopying_DOCF1">(1)</a></h3>
+<p>in footnote
+</p><h3><a name="t_hcopying_FOOT2" href="#t_hcopying_DOCF2">(2)</a></h3>
+<p>in footnote2
+</p><h3><a name="FOOT1" href="#DOCF1">(1)</a></h3>
 <p>in footnote
 </p><h3><a name="FOOT2" href="#DOCF2">(2)</a></h3>
 <p>in footnote2
 </p><h3><a name="FOOT3" href="#DOCF3">(3)</a></h3>
 <p>in footnote
 </p><h3><a name="FOOT4" href="#DOCF4">(4)</a></h3>
-<p>in footnote2
-</p><h3><a name="t_hcopying_FOOT1" href="#t_hcopying_DOCF1">(1)</a></h3>
-<p>in footnote
-</p><h3><a name="t_hcopying_FOOT2" href="#t_hcopying_DOCF2">(2)</a></h3>
 <p>in footnote2
 </p><h3><a name="FOOT5" href="#DOCF5">(5)</a></h3>
 <p>in footnote
