@@ -69,10 +69,9 @@ ul.toc {list-style: none}
 <h1 class="chapter"> 1. Chapter </h1>
 
 
-<p><a name="Copying-information"></a>
-</p>
+
 <p>This is a test manual, trivially and explicitly in the public
-domain<a name="t_hcopying_DOCF1" href="index_special_region_fot.html#t_hcopying_FOOT1">(1)</a>.
+domain<a href="index_special_region_fot.html#t_hcopying_FOOT1">(1)</a>.
 </p>
 
 
