@@ -60,13 +60,13 @@ ul.toc {list-style: none}
 
 <p><a name="Titlepage-anchor"></a>
 </p>
-<p>This is the titlepage<a href="index_special_region_no_insertcopying_fot.html#t_htitlepage_FOOT1">(1)</a>
+<p>This is the titlepage<a name="t_htitlepage_DOCF1" href="index_special_region_no_insertcopying_fot.html#t_htitlepage_FOOT1">(1)</a>
 </p>
 
 <p><a name="Copying-information"></a>
 </p>
 <p>This is a test manual, trivially and explicitly in the public
-domain<a href="index_special_region_no_insertcopying_fot.html#t_hcopying_FOOT1">(1)</a>.
+domain<a name="t_hcopying_DOCF1" href="index_special_region_no_insertcopying_fot.html#t_hcopying_FOOT1">(1)</a>.
 </p>
 
 <h1> Table of Contents</h1>
